--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.11.0",
     "tailwindcss": "^4.1.18",
     "zustand": "^5.0.9"
