--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.13.2",
     "firebase": "^12.7.0",
     "framer-motion": "^12.23.26",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
